syntax = "proto2";
option java_outer_classname = "ObjRecServiceProto";
option java_generic_services = true;

service ObjRecService
{
    rpc Recognize(Image) returns (Annotation);
    rpc RecognizeFeatures(Features) returns (Annotation);
    rpc GetImage(Annotation) returns (Image);
    rpc GetFeatures(Annotation) returns (Features);
}

message Image
{
    required bytes image = 1;
}

message Annotation
{
    required string annotation = 1;
}

message Features
{
    required DescMat descs = 1;
    repeated KeyPoint keypoints = 2;
}

message DescMat
{
    required int32 rows = 1;
    required int32 cols = 2;
    required int32 type = 3;
    required bytes data = 4;
}

message KeyPoint
{
    required double x = 1;
    required double y = 2;
}